2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b1

 * Fix: Check wether an Id was already used in makeFormIntro() 
	to avoid inavlid HTML.

 * Fix: When moving, or reordering, deleting etc. in an album,
	the (new) higlightIndex was not updated.

 * Change: Use the faster method of getting the highlightIndex in albums.php

 * New: Method resetHighlightIndex() in classes/Album.php
	Called in:
	- movePhoto
	- rearrangePhotos
	- shufflePhotos
	- sortPhotos
	- deletePhoto

 * Change: increased size of adminbar background image.

 * Change: Little code nicify in popups/sort_album.php

2006-10-31 Chris Kelly <ckdake@ckdake.com> 1.6-alpha2

 * Release: 1.6-alpha2

2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b26

 * Fix: Removed wrong errormessages when uploading from server.

2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b25

 * Fix: Upgrade message in welcome.inc was showed in too many cases.

 * Change: Little code cleanup in popups/save_photos.php

2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b24

 * Change: Added field $initialized to albumDB()
    - Better error handling.

 * Change: Added $allowedInvalidAlbums to albumDB()
    - You can now easier define whats allowed. e.g. "lost+found"

 * Fix: removed -v from jhead call, as the structure is different.

 * New: function generateCaption()

 * Change: Added additional param to getItemCaptureDate().

2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b23

 * CHANGE: description is now a fixed item field, not a custom
     - album version bump
     - tweaked edit_caption and photo view.
     - remoced description as default custom field from config
     - new methods getDescription() and setDescription

   NOTE: This means the description is CURRENTLY not migrated to G2
  
 * New: Implemented call of progressbar update for album updates.

 * Change: Better error display when adding items.

2006-10-30 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b22
